# sensing

./: .gitignore  CMakeLists.txt
src/: Sensor.cpp  Sensor.hpp  SensorDataEntry.cpp  SensorDataEntry.hpp  main.cpp  newEntry.cpp  newEntry.hpp  tester.cpp  tester.hpp
